--- a/src/css-tricks/style/blocks/header.sass
+++ b/src/css-tricks/style/blocks/header.sass
@@ -8,7 +8,7 @@
 
   background-color: $tricks-header-color
 
-  @media (max-width: 50em)
+  @media (max-width: $bp-medium-bigger)
     flex-wrap: wrap
 
     justify-content: center
