--- a/src/css-tricks/style/blocks/link-list.sass
+++ b/src/css-tricks/style/blocks/link-list.sass
@@ -8,5 +8,6 @@
     margin-left: auto
 
   &._header-list
-    @media (max-width: 50em)
-      order: 1
+    @media (max-width: $bp-medium-bigger)
+      order: 2
+      overflow: scroll
