--- a/src/yandex/style/common/sizes.sass
+++ b/src/yandex/style/common/sizes.sass
@@ -1,2 +1,10 @@
 $yandex-size-min-page-width: 90em
 $yandex-size-container-width: 58em
+
+$bp-bigger: 1446px
+$bp-big: 1200px
+$bp-medium-bigger: 1000px
+$bp-medium: 950px
+$bp-smaller: 830px
+$bp-small: 800px
+$bp-smallest: 645px
