--- a/src/css-tricks/style/blocks/cards.sass
+++ b/src/css-tricks/style/blocks/cards.sass
@@ -1,3 +1,5 @@
+$cards-card-width: 17em
+
 .cards
   display: flex
   flex-direction: row
@@ -14,6 +16,7 @@
   @media (max-width: $bp-medium-bigger)
     overflow: scroll
     margin: 0
+    max-width: 99999999999px
 
   &:after
     content: ' '
@@ -30,7 +33,7 @@
       display: none
 
   &__left
-    flex: 1 5 100%
+    flex: 1 0 $cards-card-width
 
     padding-top: 1.75em
 
@@ -97,11 +100,10 @@
     padding-top: 1em
 
   &__list
-    width: 100%
+    flex: 5 0 100%
 
     display: flex
     flex-wrap: nowrap
-    flex: 5 1 100%
 
     padding-top: 1.75em
     padding-bottom: 3.5em
@@ -120,20 +122,18 @@
       overflow: visible
 
   &__card
-    flex: 0 0 18em
+    flex: 0 0 $cards-card-width
 
     display: block
+
     margin-right: -9%
 
     box-shadow: -2em 0 3em -2em $tricks-cards-card-shadow-color
 
     transition: .2s
 
-    &:last-child
-      margin-right: 1%
-
-      @media (max-width: $bp-medium-bigger)
-        margin-right: 0
+    &:first-child
+      transform: none
 
     &:hover
       @extend :last-child
