--- a/src/yandex/style/common/colors.sass
+++ b/src/yandex/style/common/colors.sass
@@ -47,6 +47,7 @@ $tricks-subscribe-form-color: #434343
 $tricks-subscribe-form-before-color: #909090
 $tricks-subscribe-form-title-color: #ff7a18
 $tricks-subscribe-form-button-color: white
+$tricks-subscribe-form-button-font-color: black
 $tricks-subscribe-form-button-background-color: #5e5e5e
 $tricks-footer-title-color: white
 $tricks-advert-color: white
@@ -65,3 +66,4 @@ $tricks-link-header-list-color: white
 $tricks-link-content-header-icon-color: white
 $tricks-subscribe-form-subtitle-color: white
 $tricks-subscribe-form-button-color: white
+$tricks-articles-button-shadow: inset 1px 1px 0 #777, 0 2px 3px rgba(0, 0, 0, .4)
