--- a/src/yandex/style/common/sizes.sass
+++ b/src/yandex/style/common/sizes.sass
@@ -1,6 +1,7 @@
 $yandex-size-min-page-width: 90em
 $yandex-size-container-width: 58em
 
+$bp-biggest: 1500px
 $bp-bigger: 1446px
 $bp-big: 1200px
 $bp-medium-bigger: 1000px
