--- a/src/css-tricks/style/blocks/advert.sass
+++ b/src/css-tricks/style/blocks/advert.sass
@@ -9,6 +9,12 @@
   border-radius: .5em
   background-color: $tricks-advert-color
 
+  opacity: 0
+  transition: opacity ease .1s
+
+  @media (max-width: $bp-small)
+    display: none
+
   &__image
     width: 100%
 
