HTML-CSS-learning-3 / dev     - Трикс доделан

--- a/src/css-tricks/style/blocks/footer.sass
+++ b/src/css-tricks/style/blocks/footer.sass
@@ -11,8 +11,8 @@
     @include set-font-size($tricks-footer-asterix-font-size)
 
     position: absolute
-    top: -18%
-    left: 2.75%
+    top: -100px
+    left: 75px
 
     @media (max-width: $bp-smaller)
       left: unset
