--- a/src/css-tricks/style/blocks/subscribe-form.sass
+++ b/src/css-tricks/style/blocks/subscribe-form.sass
@@ -43,6 +43,7 @@
     display: flex
     flex-direction: row
     align-items: stretch
+    flex-wrap: wrap
 
   &__input
     @include set-font-size($tricks-subscribe-form-input-font-size)
@@ -52,7 +53,7 @@
 
     display: block
 
-    flex: 1 1 100%
+    flex: 1 1 auto
 
     padding: 1em .5em
 
