--- a/src/yandex/style/common/common.sass
+++ b/src/yandex/style/common/common.sass
@@ -3,6 +3,13 @@
 
 @include font-import-family($yandex-base-font-family, "../fonts/YS_text/YandexSansText")
 
+.svgstore
+  position: absolute
+  left: 0
+  top: 0
+  width: 0
+  height: 0
+
 @import "colors"
 @import "sizes"
 @import "mixin"
